--- a/PortfolioWebsite/style.css
+++ b/PortfolioWebsite/style.css
@@ -1,8 +1,11 @@
-#app {
-  font-family: Avenir, Helvetica, Arial, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  text-align: center;
-  color: #2c3e50;
-  margin-top: 60px;
+body{
+  color:white;
+}
+canvas {
+  position:fixed;
+  top: 0;
+  left: 0;
+}
+main{
+  position: absolute;
 }
